Bug 480462 - kded crashes if there is a hard disk with bad SMART
Summary: kded crashes if there is a hard disk with bad SMART
Status: RESOLVED FIXED
Alias: None
Product: plasma-disks
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-01-28 22:07 UTC by Anton Borisovich
Modified: 2024-01-29 19:30 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Anton Borisovich 2024-01-28 22:07:40 UTC
SUMMARY
kded (5.249.0) crashes if there is a hard disk with a bad SMART state in the system. Apparently it is trying to display a warning that the disk is about to die (although this is not true in my case, but that's not the point). However, if you disable the SMART service in service management, it stops crashing. If you remove a bad SMART hard disk from the system, it stops crashing too.

When it crashes, the console displays the following:
 Registering ":1.161/StatusNotifierItem" to system tray
 ASSERT: "kcm" in file ./src/smartnotifier.cpp, line 43
 KCrash: appFilePath points to nullptr!
 KCrash: Application '<unknown>' crashing... crashRecursionCounter = 2
 Aborted (core dumped)

STEPS TO REPRODUCE
1. Have a disk with bad SMART status in system
2. Start kded6 with "SMART" service enabled in service management
3. crash

OBSERVED RESULT
kded6 crashes silently after some time

EXPECTED RESULT
A new notification would appear that the disk was in a bad state (This is what happens in KDE Plasma 5)

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: KDE neon Unstable Edition (both neon-unstable-20240128-1119.iso and neon-unstable-20240122-1334.iso)
KDE Plasma Version: 6.0.80
KDE Frameworks Version: 5.249.0
Qt Version: 6.6.1

ADDITIONAL INFORMATION
Here is a video of the problem - https://drive.google.com/file/d/1oHzS7y_TQfiYIVGELeK_po2xTBVL2qOV/view?usp=sharing
Comment 1 Bug Janitor Service 2024-01-28 22:19:46 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-disks/-/merge_requests/52
Comment 2 Nicolas Fella 2024-01-29 15:01:40 UTC
Git commit 25bc84eea3b3f3f2c57a4d09bd012860d82e3f75 by Nicolas Fella.
Committed on 29/01/2024 at 14:58.
Pushed by nicolasfella into branch 'master'.

Fix finding KCM

M  +1    -1    src/smartnotifier.cpp

https://invent.kde.org/plasma/plasma-disks/-/commit/25bc84eea3b3f3f2c57a4d09bd012860d82e3f75
Comment 3 Nicolas Fella 2024-01-29 19:30:43 UTC
Git commit c77f94003aede1ee01140866c9eb5d93dc9d6ee2 by Nicolas Fella.
Committed on 29/01/2024 at 19:30.
Pushed by nicolasfella into branch 'Plasma/6.0'.

Fix finding KCM
(cherry picked from commit 25bc84eea3b3f3f2c57a4d09bd012860d82e3f75)

M  +1    -1    src/smartnotifier.cpp

https://invent.kde.org/plasma/plasma-disks/-/commit/c77f94003aede1ee01140866c9eb5d93dc9d6ee2