Fix finding KCM

BUG: 480462